Closed
Bug 1868959
Opened 2 years ago
Closed 2 years ago
Build broken with warnings as errors on platforms that don't support the Gecko profiler
Categories
(Core :: Networking, defect)
Core
Networking
Tracking
()
RESOLVED
FIXED
122 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox120 | --- | unaffected |
| firefox121 | --- | unaffected |
| firefox122 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[task 2023-12-08T03:12:08.485Z] 03:12:08 ERROR - /builds/worker/checkouts/gecko/netwerk/base/nsSocketTransportService2.cpp:1376:13: error: unused variable 'startTime' [-Werror,-Wunused-variable]
[task 2023-12-08T03:12:08.485Z] 03:12:08 INFO - 1376 | TimeStamp startTime;
[task 2023-12-08T03:12:08.485Z] 03:12:08 INFO - | ^~~~~~~~~
[task 2023-12-08T03:12:08.485Z] 03:12:08 INFO - 1 error generated.
[task 2023-12-08T03:12:08.485Z] 03:12:08 ERROR - gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:688: Unified_cpp_netwerk_base3.o] Error 1
| Assignee | ||
Comment 1•2 years ago
|
||
Comment 2•2 years ago
|
||
Set release status flags based on info from the regressing bug 1862557
status-firefox120:
--- → unaffected
status-firefox121:
--- → unaffected
status-firefox122:
--- → affected
status-firefox-esr115:
--- → unaffected
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/ac7cb012517b
Fix unused variable in nsSocketTransportService::DoPollIteration. r=necko-reviewers,kershaw
Comment 4•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 122 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•