Bug 1868959 - Fix unused variable in nsSocketTransportService::DoPollIteration. r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D195856